--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sour+Gummy:ital,wght@0,100..900;1,100..900&display=swap');
 
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: var(--font); 
   background-color: var(--rosa);
 }
 
@@ -17,6 +17,9 @@ body {
   --rosa: #FFD6DC;
   --lavanda: #E6E6FA;
   --preto: black;
+  --brancoRosado : #FAF3F3;
+  --verdeMenta: #D8F3DC;
+  --font: "Sour Gummy", sans-serif;
 }
 
 .container {
@@ -38,11 +41,13 @@ body {
 
 .header a {
   text-decoration: none;
-  color: white;
+  color: var(--preto);
 }
 
-.agora {
+.agora a {
   font-weight: 800;
+  color: var(--vermelho);
+  text-shadow: 1px 1px black;
 }
 
 .navbar {
@@ -51,13 +56,12 @@ body {
   align-items: center;
   justify-content: space-between;
   list-style: none;
-  color: white;
+  color: var(--preto);
 }
 
-.titulo {
-  color: white;
-  width: fit-content;
-  font-weight: 500;
+.logo img{
+  width: 170px;
+  height: 170px;
 }
 
 .header h1 {
@@ -147,7 +151,7 @@ body {
   height: var(--tamanho-login);
   background-image: url('https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExMjZtZnJpY2w2N2w4Y3FwNGRoMzhhcXE2bjN6dW0yNHhmbDlndWg4ZSZlcD12MV9naWZzX3NlYXJjaCZjdD1n/HSCZMUa1ao17h7l5mg/giphy.gif');
   background-size: cover;
-  background-position:center
+  background-position: center;
 }
 
 .login .container {
@@ -158,7 +162,7 @@ body {
 
 .card {
   width: 50%;
-  background-color: white;
+  background-color: var(--brancoRosado);
   border-radius: 10px;
   display: flex;
   align-items: center;
@@ -188,9 +192,9 @@ body {
 }
 
 .formulario input {
-  border: 2px solid var(--preto);
+  border: 1.5px solid var(--preto);
   text-align: center;
-  border-radius: 10px;
+  border-radius: 8px;
   margin: 0;
 }
 
@@ -276,7 +280,7 @@ body {
 
 input {
   margin-bottom: 10px;
-  border: 2px solid #32b9cd;
+  border: 2px solid var(--preto);
   padding: 10px;
   text-align: center;
   border-radius: 10px;
