--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -98,7 +98,7 @@ body {
 .agora a {
   font-weight: 800;
   color: var(--vermelho);
-  padding-bottom: 10px;
+  padding-bottom: 5px;
   border-bottom: 2px solid var(--vermelho);
 }
 
@@ -112,8 +112,8 @@ body {
 }
 
 .logo img {
-  width: 170px;
-  height: 170px;
+  width: 100px;
+  height: max-content;
 }
 
 .header h1 {
@@ -154,13 +154,16 @@ body {
 
 .social {
   display: flex;
-  height: 800px;
+  height: fit-content;
+  flex-direction: column;
 }
 
 .social .container {
   display: flex;
-  width: 100%;
+  width: 80%;
   flex-direction: row;
+  align-self: center;
+  justify-self: flex-start;
 }
 
 .social p {
@@ -176,11 +179,10 @@ body {
 .social .container .subtitulo span {
   display: flex;
   font-size: 40px;
-  font-weight: 800;
+  font-weight: 600;
   color: var(--vermelho);
   align-self: center;
   justify-self: center;
-  text-shadow: 0 0 5px var(--vermelho);
 }
 
 .social .container .subtitulo {
@@ -191,21 +193,29 @@ body {
   width: fit-content;
   height: fit-content;
   padding: 8px;
-  margin: 10px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 }
 
-.texto {
+.corpo {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 100%;
 }
 
-.social .container .texto p {
+.corpo .texto {
   display: flex;
-  font-size: 30px;
+  flex-direction: column;
+  width: 50%;
+  height: 100%;
+  justify-content: center;
+  align-content: center;
+}
+
+.social .container .corpo p {
+  display: flex;
+  font-size: 20px;
   font-weight: 400;
   margin: 0;
   padding: 0;
@@ -241,7 +251,7 @@ body {
 .login {
   height: var(--tamanho-login);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 .login .container {
@@ -254,13 +264,18 @@ body {
   border-right: 2px solid var(--vermelho);
 }
 
-#img_morcego {
-  width: 50px;
-  height: 50px;
-  margin: 0;
-  padding: 0;
+.login .img_lateral {
+  width: 100%;
+  height: 100%;
+  align-self: flex-end;
 }
 
+.login .img_lateral img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
 .card {
   width: 100%;
   background-color: transparent;
@@ -314,15 +329,17 @@ body {
 }
 
 .formulario input {
-  border-bottom: 1.5px solid var(--vermelho);
   text-align: center;
   text-justify: center;
-  border-radius: 8px;
   margin: 0;
-  box-shadow: 1px 1px 10px var(--vermelho);
   font-family: var(--font);
   font-weight: 600;
   color: var(--vermelho);
+  background: transparent;
+  border-bottom: 1px solid var(--vermelho);
+  border-radius: 0; 
+  padding: 2px;
+  outline: none;
 }
 
 .formulario select {
@@ -358,6 +375,7 @@ body {
   margin-top: 20px;
   box-shadow: 0px 0px 10px var(--vermelho);
   text-align: center;
+  transition: all 0.6s ease;
 }
 
 .botao:hover {
