--- a/public/css/login.css
+++ b/public/css/login.css
@@ -144,23 +144,35 @@ body {
 /*Rodapé*/
 
 .footer {
+  display: flex;
+  flex-direction: row;
   background-color: var(--preto);
-  height: 150px;
+  height: 100%;
   color: var(--vermelho);
   border-top: 1px solid var(--vermelho);
-  display: flex;
   font-size: 15px;
   box-shadow: 0px -5px 70px var(--vermelho);
-  position: relative;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .footer .container {
-  justify-content: center;
-  text-align: center;
+  display: flex;
+  margin: 0;
+  align-self: center;
+  justify-self: flex-start;
+  width: 100%;
+  height: 100%;
 }
 
-.footer .container .version {
-  font-size: 12px;
+.footer .container .logo_footer {
+  width: 100px;
+  height: fit-content;
+}
+
+.footer .container .logo_footer img {
+  width: 100px;
+  height: fit-content;
 }
 
 /*Tela de Login*/
