--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -21,6 +21,7 @@ body {
   --tamanho-login: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
   --tamanho-footer: 65px;
   --vermelho: red;
+  --branco: white;
   --verde: #2CFF05;
   --preto: black;
   --font: "Poppins", sans-serif;
@@ -77,8 +78,13 @@ body {
 
 .header a {
   text-decoration: none;
+  color: var(--branco);
+  transition: transform 0.6s ease;
+}
+
+.header a:hover {
   color: var(--vermelho);
-  transition: transform 0.3s ease;
+  transition: transform 0.6s ease;
 }
 
 .header li {
@@ -88,13 +94,16 @@ body {
 
 .header li:hover {
   transform: scale(1.1);
+  color: var(--vermelho);
   text-shadow: 0 0 5px var(--vermelho);
+  transition: all 0.6s ease;
 }
 
 .agora a {
   font-weight: 800;
   padding-bottom: 5px;
   border-bottom: 2px solid var(--vermelho);
+  color: var(--vermelho);
 }
 
 .navbar {
@@ -103,17 +112,17 @@ body {
   align-items: center;
   justify-content: space-between;
   list-style: none;
-  color: var(--vermelho);
+  color: var(--branco);
   font-size: 16px;
 }
 
 .interrogacao a {
-  color: var(--vermelho);
+  color: var(--branco);
   transition: all 0.5s ease;
 }
 
 .interrogacao {
-  color: var(--vermelho);
+  color: var(--branco);
   transition: all 0.6s ease;
 }
 
@@ -130,7 +139,6 @@ body {
   transition: all 0.6s ease;
   transform: scale(1.1);
 }
-
 .logo img {
   width: 100px;
   height: max-content;
@@ -209,7 +217,7 @@ body {
 .card h2 {
   margin: 0;
   font-size: 30px;
-  color: var(--vermelho);
+  color: var(--branco);
 }
 
 .titulo_formulario {
@@ -241,7 +249,7 @@ body {
 .formulario span {
   font-size: 15px;
   font-weight: 800;
-  color: var(--vermelho);
+  color: var(--branco);
 }
 
 .formulario input {
@@ -252,7 +260,7 @@ body {
   font-weight: 600;
   color: var(--vermelho);
   background: transparent;
-  border-bottom: 1px solid var(--vermelho);
+  border-bottom: 1px solid var(--branco);
   border-radius: 0; 
   padding: 2px;
   outline: none;
