--- a/public/css/charada.css
+++ b/public/css/charada.css
@@ -22,6 +22,7 @@ body {
   --tamanho-login: calc(100vh - var(--tamanho-header) - var(--tamanho-footer) - 2px);
   --tamanho-footer: 65px;
   --vermelho: red;
+  --branco: white;
   --verde: #2CFF05;
   --preto: black;
   --font: "Poppins", sans-serif;
@@ -62,12 +63,89 @@ body {
   margin: auto;
 }
 
+/*Tela do jogo*/
+
+.charada .container {
+  display: flex;
+  width: 50%;
+  height: fit-content;
+  margin: 0;
+  margin-top: 90px;
+  margin-bottom: 90px;
+  padding: 20px;
+  border: 2px solid var(--verde);
+  border-radius: 10px;
+  align-self: center;
+  justify-self: center;
+}
+
+.charada .container .inicioJogo {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border-radius: 10px;
+}
+
+.charada .container .inicioJogo h2 {
+  font-size: 24px;
+  color: var(--verde);
+  margin-bottom: 40px;
+  justify-self: flex-start;
+  align-self: center;
+}
+
+.charada .container .inicioJogo .input_e_resultado {
+  display: flex;
+  flex-direction: column;
+  width: 50%;
+  height: max-content;
+  align-self: center;
+  justify-self: center;
+}
+
+.charada .container .inicioJogo .input_e_resultado input {
+  padding: 10px;
+  margin-top: 10px;
+  margin-bottom: 8px;
+  width: fit-content;
+  border: none;
+  background-color: var(--preto);
+  border: 1px solid var(--verde);
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px var(--verde);
+  outline: none;
+  color: var(--verde);
+  align-self: center;
+  justify-self: center;
+}
+
+.charada .container .inicioJogo .input_e_resultado button {
+  margin-top: 10px;
+  padding: 10px 20px;
+  width: fit-content;
+  text-align: center;
+  background-color: var(--verde);
+  color: var(--preto);
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  align-self: center;
+  justify-self: center;
+}
+
+.feedback {
+  margin-top: 15px;
+  font-style: italic;
+}
+
 /*Barra de navegação*/
 
 .header {
   height: var(--tamanho-header);
   border-bottom: 1px solid var(--verde);
-  box-shadow: 0px 5px 70px var(--verde);
+  box-shadow: 0px 3px 30px var(--verde);
 }
 
 .header .container {
@@ -78,24 +156,31 @@ body {
 
 .header a {
   text-decoration: none;
-  color: var(--verde);
-  transition: transform 0.3s ease;
+  color: var(--branco);
+  transition: transform 0.6s ease;
+}
+
+.header a:hover {
+  color: var(--vermelho);
+  transition: transform 0.6s ease;
 }
 
 .header li {
-  transition: transform 0.5s ease;
+  transition: transform 0.6s ease;
   cursor: pointer;
 }
 
 .header li:hover {
   transform: scale(1.1);
-  text-shadow: 0 0 5px var(--verde);
+  text-shadow: 0 0 5px var(--vermelho);
+  color: var(--vermelho);
 }
 
 .agora a {
   font-weight: 800;
   padding-bottom: 5px;
   border-bottom: 2px solid var(--verde);
+  color: var(--verde);
 }
 
 .navbar {
@@ -104,28 +189,28 @@ body {
   align-items: center;
   justify-content: space-between;
   list-style: none;
-  color: var(--verde);
+  color: var(--branco);
   font-size: 16px;
 }
 
-.interrogacao a {
-  color: var(--verde);
+.agora .interrogacao span {
+  color: var(--branco);
   transition: all 0.5s ease;
 }
 
-.interrogacao {
-  color: var(--verde);
+.agora .interrogacao {
+  color: var(--branco);
   transition: all 0.6s ease;
 }
 
-.interrogacao a:hover {
+.agora .interrogacao span:hover {
   text-shadow: 0 0 10px var(--verde);
   color: var(--verde);
   transition: all 0.6s ease;
   transform: scale(1.1);
 }
 
-.interrogacao:hover {
+.agora .interrogacao:hover {
   text-shadow: 0 0 10px var(--verde);
   color: var(--verde);
   transition: all 0.6s ease;
@@ -134,11 +219,11 @@ body {
 
 .logo img {
   width: 100px;
-  height: max-content;
 }
 
-.header h1 {
-  margin: 0;
+.logo {
+  width: 100px;
+  height: max-content
 }
 
 /*Rodapé*/
@@ -150,7 +235,7 @@ body {
   border-top: 1px solid var(--verde);
   display: flex;
   font-size: 15px;
-  box-shadow: 0px -5px 70px var(--verde);
+  box-shadow: 0px -3px 30px var(--verde);
   position: relative;
 }
 
