--- a/public/css/index.css
+++ b/public/css/index.css
@@ -66,7 +66,7 @@ body {
 .header {
   height: var(--tamanho-header);
   border-bottom: 1px solid var(--vermelho);
-  box-shadow: 0px 5px 70px var(--vermelho);
+  box-shadow: 0px 3px 30px var(--vermelho);
 }
 
 .header .container {
@@ -87,7 +87,7 @@ body {
 }
 
 .header li {
-  transition: transform 0.5s ease;
+  transition: transform 0.6s ease;
   cursor: pointer;
 }
 
@@ -141,9 +141,9 @@ body {
   width: 100px;
   height: max-content;
 }
-
-.header h1 {
-  margin: 0;
+.logo {
+  width: 100px;
+  height: max-content;
 }
 
 /*Tela Inicial*/
@@ -267,7 +267,7 @@ body {
   color: var(--branco);
   border-top: 1px solid var(--vermelho);
   font-size: 15px;
-  box-shadow: 0px -5px 70px var(--vermelho);
+  box-shadow: 0px -3px 30px var(--vermelho);
   margin: 0;
   box-sizing: border-box;
 }
